--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "start_url": "room_0.html",
     "display": "standalone",
     "background_color": "#383838",
-    "theme_color": "#ffffff",
+    "theme_color": "#383838",
     "icons": [
       {
         "src": "https://via.placeholder.com/192",
