--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,8 @@
     "theme_color": "#383838",
     "icons": [
       {
-        "src": "https://via.placeholder.com/192",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "https://via.placeholder.com/512",
-        "sizes": "512x512",
+        "src": "icons/app.png",
+        "sizes": "390x390",
         "type": "image/png"
       }
     ]
