--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,16 @@
 {
-    "name": "Putzplan",
-    "short_name": "Putzplan",
-    "start_url": "room_0.html",
-    "display": "standalone",
-    "background_color": "#383838",
-    "theme_color": "#383838",
-    "icons": [
-      {
-        "src": "icons/app_rounded.png",
-        "sizes": "390x390",
-        "type": "image/png"
-      }
-    ]
-  }
+  "name": "Putzplan",
+  "short_name": "Putzplan",
+  "start_url": "room_0.html",
+  "display": "standalone",
+  "background_color": "#383838",
+  "theme_color": "#007BFF",
+  "icons": [
+    {
+      "src": "icons/app_rounded.png",
+      "sizes": "390x390",
+      "type": "image/png"
+    }
+  ]
+}
   
